fixes gap in table

--- a/static/prelogin/less/components/pricing-section.less
+++ b/static/prelogin/less/components/pricing-section.less
@@ -13,9 +13,9 @@
 @pricing-third-section-height-md: 487px;
 @pricing-third-section-height-lg: 518px;
 
-@pricing-fourth-section-height-xs: 486px;
-@pricing-fourth-section-height-sm: 486px;
-@pricing-fourth-section-height-md: 481px;
+@pricing-fourth-section-height-xs: 440px;
+@pricing-fourth-section-height-sm: 440px;
+@pricing-fourth-section-height-md: 435px;
 @pricing-fourth-section-height-lg: 496px;
 
 @pricing-fifth-section-height-xs: 191px;
